--- a/styles.css
+++ b/styles.css
@@ -101,6 +101,75 @@ body h5{
 }
 
 
+@media (max-width: 605px) {
+    body{
+        background: var(--color-primary);
+        display: flex;
+       align-items: center;
+       justify-content: center;
+    
+    }
+
+    .general-cont{
+        width: 100%;
+    }
+
+
+    .container{
+        position: relative;
+        margin-left: 3.5rem;
+        height: 100%;
+        border-radius: 6px;
+        background: #fff;
+        top: 0;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+        /*font-size: 1rem;
+        font-weight: bolder;
+        font-style: normal;
+        line-height: 12px;
+        font-variant: normal;
+        font-kerning: auto;
+        font-stretch: 100%;*/
+    }
+
+    .container .badge{
+        position: relative;
+        width: 80px;
+        height: 67px;
+        background: var(--color-primary);
+    }
+    
+    .container .badge .circle{
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        background: #fff;
+        margin: 5px;
+    }
+    
+    .container .badge strong{
+        position: absolute;
+        bottom: 7px;
+        left: 7px;
+        font-size: 20px;
+        color: #fff;
+        font-weight: bolder;
+        font-style: normal;
+        line-height: 12px;
+        font-variant: normal;
+        font-kerning: auto;
+        font-stretch: 100%;
+    }
+
+    body h5{
+        font-size: 1rem;
+        bottom: 0.3rem;
+        color: var(--color-white);
+        margin-left: 3.5rem;
+    }
+}
+
 
 
 
